fix: Command pallette covered by chat on smaller screens (#4183)
* fix: fix command palette not displayed on smaller screens

* fix: command palette not expanding when screen gets bigger

--- a/src/command-pallette/CommandPalletteUI/CommandPaletteUI.scss
+++ b/src/command-pallette/CommandPalletteUI/CommandPaletteUI.scss
@@ -17,6 +17,9 @@
     position: absolute;
     top: calc(var(--_ui5-v2-11-0_shellbar_root_height) * -1);
     opacity: 0%; //prevent visually jumping
+    @media (min-width: 1040px) {
+      opacity: 100%;
+    }
   }
 
   &__content {
